word wrap fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -328,7 +328,7 @@ body {
   font-feature-settings: "ss01";
   -webkit-font-smoothing: antialiased;
   overflow-x: hidden;
-  word-break: break-word;
+  /* word-break: break-word; */
   color: var(--bs-primary);
 }
 
